# vxd3v_converter

./: .dockerignore  .env.example  .gitignore  DEVLOG.md  Dockerfile  LICENSE  README.md  docker-entrypoint.sh  pyproject.toml
app/: __init__.py  cli.py  config.py  main.py
app/bot/: __init__.py  admin.py  banners.py  downloader.py  handlers.py  keyboards.py  middleware.py  panel.py  payment_handlers.py  sources.py  texts.py
app/models/: __init__.py  media.py
app/repositories/: __init__.py  broadcasts.py  payments.py  settings.py
app/services/: broadcast.py  conversion.py  crypto_pay.py  errors.py  media_probe.py  media_renderer.py  media_validation.py  payments.py  preview.py  process_runner.py  render_cache.py  render_planner.py  tgs_renderer.py
assets/: preview-label.txt
native/: tgs_renderer.cpp
tests/: conftest.py  test_banners.py  test_broadcasts.py  test_container_render.py  test_media_renderer.py  test_media_validation.py  test_panel.py  test_payments.py  test_referrals.py  test_render_cache.py  test_render_gate.py  test_render_planner.py  test_repository.py  test_sources_and_keyboards.py
Инструкции для AI/Инструкции/: Инструкции по Git.md  Создание Telegram ботов.md
Инструкции для AI/Премиум эмодзи/: premium_emoji.json
Инструкции для AI/Референсы/: Рассылка.txt
